# telepathy-rakia

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.old  Makefile.am  NEWS  README  TODO  _boring  autogen.sh  configure.ac
data/: Makefile.am  im.telepathy.v1.ConnectionManager.sofiasip.service.in  im.telepathy1.ConnectionManager.sofiasip.service.in  org.freedesktop.Telepathy.ConnectionManager.sofiasip.service.in
docs/: Makefile.am  design.txt  telepathy-rakia-1.8.in  telepathy-rakia.8.in  telepathy-sofiasip.8.in
extensions/: Channel_Interface_Call_State.xml  Makefile.am  all.xml  channel.xml  extensions-cli.c  extensions.c  extensions.h
m4/: Makefile.am
rakia/: Makefile.am  base-connection-sofia.c  base-connection.c  base-connection.h  call-channel.c  call-channel.h  call-content.c  call-content.h  call-stream.c  call-stream.h  codec-param-formats.c  codec-param-formats.h  connection-aliasing.c  connection-aliasing.h  debug.c  debug.h  event-target.c  event-target.h  handles.c  handles.h  media-channel.c  media-channel.h  media-manager.c  media-manager.h  media-session.c  media-session.h  media-stream.c  media-stream.h  signals-marshal.list  sip-media.c  sip-media.h  sip-session.c  sip-session.h  sofia-decls.h  text-channel.c  text-channel.h  text-manager.c  text-manager.h  util.c  util.h
src/: Makefile.am  conn-aliasing.c  conn-aliasing.h  debug.c  debug.h  media-factory.c  media-factory.h  protocol.c  protocol.h  signals-marshal.list  sip-connection-helpers.c  sip-connection-helpers.h  sip-connection-manager.c  sip-connection-manager.h  sip-connection-private.h  sip-connection-sofia.c  sip-connection-sofia.h  sip-connection.c  sip-connection.h  sip-media-channel.c  sip-media-channel.h  sip-media-session.c  sip-media-session.h  sip-media-stream.c  sip-media-stream.h  sip-sofia-decls.h  sip-text-channel.c  sip-text-channel.h  telepathy-helpers.c  telepathy-helpers.h  telepathy-rakia.c  telepathy-sofiasip.c  text-factory.c  text-factory.h  tpsip-connection-helpers.c  tpsip-connection-helpers.h  tpsip-connection-manager.c  tpsip-connection-sofia.c  tpsip-connection.h  tpsip-debug.c  (+7 more)
tests/: Makefile.am  exec-with-log.sh.in  org.freedesktop.Telepathy.ConnectionManager.sofiasip.service.in  run-with-tmp-session-bus.sh  sofiatest.py  test-handle-normalisation.py  test-message.py  test-register-fail.py  test-register.py  tp_caller.c
tests/suppressions/: rakia.supp
tests/twisted/: Makefile.am  constants.py  run-test.sh.in  servicetest.py  sofiatest.py  test-debug.py  test-handle-normalisation.py  test-message.py  test-register-fail.py  test-register-sasl.py  test-register.py  test-self-alias.py
tests/twisted/cm/: protocol.py
tests/twisted/text/: initiate-requestotron.py
tests/twisted/tools/: Makefile.am  exec-with-log.sh.in  rakia.service.in  sofiasip.service.in
tests/twisted/tools/installed/: tmp-session-bus.conf.in
tests/twisted/voip/: add-remove-content.py  calltest.py  direction-change.py  dtmf.py  incoming-basics.py  outgoing-basics.py  requestable-classes.py  ringing-queued.py  voip_test.py
tools/: Makefile.am  glib-client-marshaller-gen.py  glib-ginterface-gen.py  glib-signals-marshal-gen.py  lcov.am  libglibcodegen.py  telepathy.am
tpsip/: Makefile.am  base-connection-sofia.c  base-connection.c  base-connection.h  codec-param-formats.c  codec-param-formats.h  connection-aliasing.c  connection-aliasing.h  debug.c  debug.h  event-target.c  event-target.h  handles.c  handles.h  media-channel.c  media-channel.h  media-manager.c  media-manager.h  media-session.c  media-session.h  media-stream.c  media-stream.h  signals-marshal.list  sofia-decls.h  text-channel.c  text-channel.h  text-manager.c  text-manager.h  util.c  util.h
tpsip-extensions/: Makefile.am  channel.xml  extensions.h
